# retention_reinvestment

./: .gitignore  app.py  config.py  pyproject.toml
.github/workflows/: cron-notify.yml  cron-scrape.yml
agent/: agent.py  deps.py  models.py
scripts/: login_save_cookies.py  refresh_secret.py  scrape_to_supabase.py
skills/get-stock-price/: SKILL.md
skills/get-stock-price/scripts/: get_price.py
skills/scrape-watchlist/: SKILL.md
skills/scrape-watchlist/scripts/: scrape.py
skills/search-stock/: SKILL.md
skills/search-stock/scripts/: search.py
sql/: setup.sql
utils/: quick_lookup.py  stock_cache.py
